[gd_scene load_steps=13 format=2]

[ext_resource path="res://images/placeholder-cabania - copia.png" type="Texture" id=1]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/espaciadores/Espacio3.png" type="Texture" id=3]
[ext_resource path="res://assets/Botones/aves.png" type="Texture" id=4]
[ext_resource path="res://assets/espaciadores/espacio.png" type="Texture" id=5]
[ext_resource path="res://scenes/animales-tema.gd" type="Script" id=6]
[ext_resource path="res://assets/iconos/atras.png" type="Texture" id=7]
[ext_resource path="res://assets/espaciadores/espacio2.png" type="Texture" id=8]
[ext_resource path="res://assets/Botones/mamiferos.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 3000.0
margin_bottom = 1200.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 61.0
margin_top = 50.0
margin_right = 101.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "AKJWBDKAW"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1050.0
margin_bottom = 602.0

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 602.0
texture_normal = ExtResource( 8 )

[node name="salirmod" type="TextureButton" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 118.0
margin_bottom = 91.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 7 )

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
margin_left = 122.0
margin_right = 192.0
margin_bottom = 602.0
texture_normal = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 196.0
margin_right = 853.0
margin_bottom = 602.0
alignment = 1

[node name="Filler9" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 657.0
margin_bottom = 139.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 657.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 3 )
text = "  ELIGE LA TEM√ÅTICA:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 657.0
margin_bottom = 342.0

[node name="Filler5" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler6" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler7" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler8" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 132.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="MAMIFEROS" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 526.0
margin_bottom = 113.0
hint_tooltip = "Jugar"
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = ExtResource( 9 )
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 657.0
margin_bottom = 458.0

[node name="Filler5" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 30.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler6" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler7" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler8" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_right = 132.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="AVES" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 136.0
margin_right = 526.0
margin_bottom = 112.0
hint_tooltip = "Jugar"
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 462.0
margin_right = 657.0
margin_bottom = 509.0

[node name="Filler3" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 30.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler4" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler5" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler6" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 102.0
margin_right = 132.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler7" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 136.0
margin_right = 166.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[node name="Filler8" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 170.0
margin_right = 200.0
margin_bottom = 47.0
hint_tooltip = "Jugar"
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/salirmod" to="." method="_on_salirmod_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/MAMIFEROS" to="." method="_on_MAMIFEROS_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/AVES" to="." method="_on_AVES_pressed"]
